# feeds

./: .gitignore  README.md  bun.lockb  index.html  package.json  tsconfig.json  twind.config.ts  vite.config.ts
.github/workflows/: build.yaml
src/: App.tsx  index.css  index.tsx  styles.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/plugins/: fmk.rs  hn.rs  mod.rs  ruli.rs  structs.rs  utils.rs
src/components/: Popover.tsx  ResizeBorder.tsx  Tooltip.tsx
src/components/Atoms/: CommentNum.tsx  LabelWithIcon.tsx  Time.tsx
src/components/FeedDetail/: Empty.tsx  FeedDetailHeader.tsx  Loading.tsx  index.tsx
src/components/FeedDetail/Comment/: index.tsx
src/components/FeedDetail/Content/: Image.tsx  Link.tsx  Video.tsx  index.tsx
src/components/Feeds/: FeedHeader.tsx  FeedItem.tsx  FeedNavLink.tsx  FeedPlaceholder.tsx  index.tsx
src/components/Sidebar/: Decorator.tsx  FeedLink.tsx  FeedList.tsx  FeedSection.tsx  index.tsx
src/config/: const.ts
src/models/: focus.ts  menu.ts  route.ts  size.ts  title.ts
src/pages/: DetailPage.tsx  FeedPage.tsx  index.tsx
src/utils/: parseRelativeDate.ts  unit.ts
